--- a/how-it-works.html
+++ b/how-it-works.html
@@ -38,9 +38,9 @@
 
     </div>
     <div class="container-fluid pt-1 bg-danger text-white  d-flex align-items-center justify-content-center">
-        <p>For more information on TibaMtaani visit our youtube channel</p>
+        <p style="font-size:150%;">For More information visit <a class="tv" href="https://www.youtube.com/channel/UCadQ0XPVDJIm6zvcdcmt6NQ"  target="_blank"> TibaMtaani TV </a></p>
     </div>
-    <div class="container pt-5 pb-5">
+    <div class="container pt-5 pb-5" id="how">
         <div class="row d-flex justify-content-center align-items-center">
             <div class="col-md-4">
                 <span>Tibapedia</span>
@@ -58,14 +58,14 @@
                     in a specific area, to the various fields of medicine and diseases
                 </p>
             </div>
-            <div class="col-md-4">
+            <!-- <div class="col-md-4"> -->
 
-                <span>Support Us</span>
+                <!-- <span>Support Us</span>
                 <p>
                     Tibapedia is an initiative by Tiba Mtaani to build an online directory to enable citizens to access most if not all information concerning health.It is both an information and education platform that helps stakeholders access information such as the hospitals
                     in a specific area, to the various fields of medicine and diseases
-                </p>
-            </div>
+                </p> -->
+            <!-- </div> -->
         </div>
     </div>
     <footer class="d-flex justify-content-evenly align-items-center">
