--- a/user-login.html
+++ b/user-login.html
@@ -14,8 +14,10 @@
 
     <div class="container">
         <form id="form1">
+            
+       
 
-            <button id="ex">x</button>
+          <a href="index.html" id="ex">x</a>
             <label for="user">Login as</label>
             <br>
             <select name="user" id="user">
