--- a/about.html
+++ b/about.html
@@ -20,11 +20,17 @@
                 <p class="text-warning">tiba<span class="text-white">mtaani</span></p>
             </div>
         </a>
-        <ul>
-            <li><a href="about.html">About</a></li>
-            <li><a class="text-warning" href="healthdir.html">How it works</a></li>
-            <li><a href="Hosp.html">signup</a></li>
-            <li class="bg-success pt-2 pb-2 ps-4 pe-4 rounded-pill"><a href="log.html">login</a></li>
+         <ul>
+            <li class="nav-item active"><a href="healthdir.html">Tib<span class="text-warning">aped</span>ia</a></li>
+            <li><a href="how-it-works.html">How it works</a></li>
+            <li><a href="user-login.html">login</a></li>
+            <div class="dropdown">
+                <button class="dropbtn">Sign Up</button>
+                <div class="dropdown-content">
+                    <a href="signup-user.html">User Sign Up</a>
+                    <a href="signup-doctor.html">Doctor Sign Up</a>
+                </div>
+            </div>
         </ul>
     </div>
 
@@ -42,9 +48,8 @@
         </div>
 
         <p>
-            Lörem ipsum gesugent krosm, i nilingar, det vill säga geokur. Äre rödgrönrosa mikrosurat. Mibin prevoning inklusive jös spepost pon om euroska. Bening bebelt inte farar nägt respektive teranera. Vilig plan, fast planaligen vilaktig, pål, misask. Ara pretåsm
-            premigt rening även om bebel.Lörem ipsum gesugent krosm, i nilingar, det vill säga geokur. Äre rödgrönrosa mikrosurat. Mibin prevoning inklusive jös spepost pon om euroska. Bening bebelt inte farar nägt respektive teranera. Vilig plan, fast
-            planaligen vilaktig, pål, misask. Ara pretåsm premigt rening även om bebel.
+            TibaMtaani is a brainchild of four African youths who felt the need to bring about significant change in the healthcare sector. The search for a health facility to provide therapeutic aid can be a challenge but the greatest challenge is getting one that provides quality healthcare. TibaMtaani Web Application solves the two problems by providing a directory that lists health facilities  in specific locations  and their services. TibaMtaani team keenly scrutinizes the services provided by each health facility and once it satisfies the TibaMtaani standard, the health facility is made available on the web app
+
         </p>
 
         <span>executives</span>
@@ -54,22 +59,33 @@
     <div class="container" id="cards">
         <div class="row d-flex justify-content-evenly">
             <div class="col-lg-3">
-                <h5>financial director</h5>
+                <h5>Chief Technology Officer</h5>
                 <div id="card1" class="cardImg"></div>
+                <h5>Dr. Nina Odoyo</h5>
                 <p>
                     Disk plassade, seteskap. Stenor demibel. Mir mikros hjärtslagslag. Tefoni.
                 </p>
             </div>
             <div class="col-lg-3">
-                <h5>c.e.o</h5>
+                <h5>Chief Financial Officer</h5>
                 <div id="card2" class="cardImg"></div>
+                <h5>Dr. James Njoroge</h5>
                 <p>
                     Disk plassade, seteskap. Stenor demibel. Mir mikros hjärtslagslag. Tefoni.
                 </p>
             </div>
             <div class="col-lg-3">
-                <h5>managing director</h5>
+                <h5>Chief Health Officer</h5>
                 <div id="card3" class="cardImg"></div>
+                <p>
+                    <h5>Dr. Mercy Murigi</h5>
+                    Disk plassade, seteskap. Stenor demibel. Mir mikros hjärtslagslag. Tefoni.
+                </p>
+            </div>
+            <div class="col-lg-3">
+                <h5>Chief Executive Officer</h5>
+                <div id="card3" class="cardImg"></div>
+                <h5>Dr. Kevin Malomba</h5>
                 <p>
                     Disk plassade, seteskap. Stenor demibel. Mir mikros hjärtslagslag. Tefoni.
                 </p>
