--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
                 <div id="card1" class="cardImg"></div>
                 <h5>Dr. Nina Odoyo</h5>
                 <p>
-                    Disk plassade, seteskap. Stenor demibel. Mir mikros hjärtslagslag. Tefoni.
+                    She is a full stack developer with expansive skills in interdevelopment analysis, spatial analysis and data modelling. She is passionate about using technology to enhance the nutritional and mental well being of individuals to foster sustainable environments and livelihoods.
                 </p>
             </div>
             <div class="col-lg-3">
@@ -79,7 +79,7 @@
                 <div id="card3" class="cardImg"></div>
                 <p>
                     <h5>Dr. Mercy Murigi</h5>
-                    Disk plassade, seteskap. Stenor demibel. Mir mikros hjärtslagslag. Tefoni.
+                    Mercy is a sociologist, psychologist and a hydroponics expert. She is passionate about mental health and nutrition in Kenya. Mercy is involved with personal well-being empowerment through personal coaching, mentoring programs and mental well-being counselling.
                 </p>
             </div>
             <div class="col-lg-3">
