--- a/healthdir.html
+++ b/healthdir.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/676b23db47.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/healthdir.css">
     <title>Tibapedia</title>
@@ -95,16 +96,22 @@
             </div>
         </a>
 
-        <ul>
-            <li>About us</li>
-            <li>How it Works</li>
-            <li>Tibapedia</li>
-            <li>Career opportunities</li>
-            <li>TibaMtaani TV</li>
+        <ul style="font-size:larger" id="footerLinks">
+            <li><a href="about.html">About us</a></li>
+            <li><a href="how-it-works.html">How it Works</a></li>
+            <li><a href="healthdir.html">Tibapedia</a></li>
+            <li><a href="">Career opportunities</a></li>
+            <li><a href="https://www.youtube.com/channel/UCadQ0XPVDJIm6zvcdcmt6NQ">TibaMtaani TV</a></li>
         </ul>
 
         <ul class="pb-5 mb-5">
-            <li>Social Media</li>
+            <li style="font-size:larger">Social Media</li><br>
+            <span class="icon">
+                <a href="https://web.facebook.com/?_rdc=1&_rdr"><i class="fab fa-facebook"></i></a></abbr>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a></abbr>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <a href="https://twitter.com/kmalomba "><i class="fab fa-twitter "></i></a></abbr>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <a href="https://www.linkedin.com/login"><i class="fab fa-linkedin "></i></a>
+            </span>
 
         </ul>
     </footer>
