--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     <span class="mt-4">TibaMtaani Tv</span>
                 </div>
                 <div class="col-md-4">
-                    <a href="https://wa.me/+254759700444"><svg width="58" height="100" viewBox="0 0 58 100" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <a href="https://www.paypal.com/ke/home" target="_blank"><svg width="58" height="100" viewBox="0 0 58 100" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M41.7344 45.5859L20.6406 39.4141C18.1992 38.7109 16.5 36.4258 16.5 33.8867C16.5 30.7031 19.0781 28.125 22.2617 28.125H35.2109C37.5937 28.125 39.9375 28.8477 41.8906 30.1758C43.082 30.9766 44.6836 30.7812 45.6992 29.7852L52.4961 23.1445C53.8828 21.7969 53.6875 19.5508 52.1445 18.3594C47.3594 14.6094 41.3828 12.5195 35.25 12.5V3.125C35.25 1.40625 33.8437 0 32.125 0H25.875C24.1562 0 22.75 1.40625 22.75 3.125V12.5H22.2617C9.82031 12.5 -0.179692 23.1836 0.972651 35.8594C1.79296 44.8633 8.66796 52.1875 17.3398 54.7266L37.3594 60.5859C39.8008 61.3086 41.5 63.5742 41.5 66.1133C41.5 69.2969 38.9219 71.875 35.7383 71.875H22.7891C20.4062 71.875 18.0625 71.1523 16.1094 69.8242C14.918 69.0234 13.3164 69.2188 12.3008 70.2148L5.5039 76.8555C4.11718 78.2031 4.31249 80.4492 5.85546 81.6406C10.6406 85.3906 16.6172 87.4805 22.75 87.5V96.875C22.75 98.5938 24.1562 100 25.875 100H32.125C33.8437 100 35.25 98.5938 35.25 96.875V87.4609C44.3516 87.2852 52.8867 81.875 55.8945 73.2617C60.0937 61.2305 53.043 48.8867 41.7344 45.5859Z"/>
                         </svg></a>
                     <span>Support Us</span>
@@ -112,20 +112,21 @@
             </div>
         </a>
 
-        <ul>
-            <li><a href="">About us</a></li>
-            <li><a href=""></a>How it Works</a></li>
-            <li><a href=""></a>Tibapedia</a></li>
-            <li><a href=""></a>Career opportunities</a></li>
-            <li><a href=""></a>TibaMtaani TV</a></li>
+        <ul style="font-size:larger" id="footerLinks">
+            <li><a href="about.html">About us</a></li>
+            <li><a href="how-it-works.html">How it Works</a></li>
+            <li><a href="healthdir.html">Tibapedia</a></li>
+            <li><a href="">Career opportunities</a></li>
+            <li><a href="https://www.youtube.com/channel/UCadQ0XPVDJIm6zvcdcmt6NQ">TibaMtaani TV</a></li>
         </ul>
 
         <ul class="pb-5 mb-5">
-            <li>Social Media</li>
+            <li style="font-size:larger">Social Media</li><br>
             <span class="icon">
-                <abbr title="Malomba on Github "> <a href="https://github.com/MalombaKevin "><i class="fab fa-github "></i></a></abbr>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <abbr title="Malomba on Twitter "><a href="https://twitter.com/kmalomba "><i class="fab fa-twitter "></i></a></abbr>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <abbr title="Malomba on LinkedIn "><a href="https://ke.linkedin.com/in/kevin-malomba-44ba731a3 "><i class="fab fa-linkedin "></i></a><a/bbr>
+                <a href="https://web.facebook.com/?_rdc=1&_rdr"><i class="fab fa-facebook"></i></a></abbr>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a></abbr>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <a href="https://twitter.com/kmalomba "><i class="fab fa-twitter "></i></a></abbr>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <a href="https://www.linkedin.com/login"><i class="fab fa-linkedin "></i></a>
             </span>
 
         </ul>
