--- a/signup-doctor.html
+++ b/signup-doctor.html
@@ -15,11 +15,11 @@
     <div class="container">
         <form id="form1">
 
-            <button id="ex">x</button>
+            <a href="index.html"><span class="p-1 " id="ex">x</span></a>
 
             <label for="hospName">Hospital Name</label>
             <br>
-            <input type="text" id="hospName" placeholder="Enter Your Hospital Name" required>
+            <input type="text" id="hospName" required>
             <br>
 
             <label for="contact">Phone Number/Office number</label>
@@ -28,15 +28,13 @@
             <br>
             <label for="Location">Location</label>
             <br>
-            <input type="text" id="Location" placeholder="Where are you located" required>
+            <input type="text" id="Location" required>
             <br>
 
             <label for="InputEmail1">Email address</label>
             <br>
             <input type="email" id="Email1" aria-describedby="email1" required>
             <br>
-            <div id="email1" class="form-text">We'll never share your email with anyone else.</div>
-
             <label for="Services"> Select Services that you are offering</label>
             <br>
 
