--- a/signup-user.html
+++ b/signup-user.html
@@ -15,7 +15,7 @@
     <div class="container">
         <form id="form1">
 
-            <button id="ex">x</button>
+            <a href="index.html"><span class="p-1 " id="ex">x</span></a>
 
             <label for="hospName">Your Name</label>
             <br>
@@ -28,7 +28,7 @@
             <br>
             <label for="Location">Location</label>
             <br>
-            <input type="text" id="Location" placeholder="Where are you located" required>
+            <input type="text" id="Location" required>
             <br>
 
             <label for="InputEmail1">Email address</label>
