--- a/about.html
+++ b/about.html
@@ -71,10 +71,10 @@
                 <div id="card2" class="cardImg"></div>
                 <h5>Dr. James Njoroge</h5>
                 <p>
-                    Disk plassade, seteskap. Stenor demibel. Mir mikros hjärtslagslag. Tefoni.
+                    Dev.James Njoroge is a developing software engineer, living in Nairobi, Kenya. When he's not coding, he's playing PC games, learning  Chinese, and taking silly photos of his cat, Pizza.
                 </p>
             </div>
-            <div class="col-lg-3">
+            <div class="col-lg-3 text-white">
                 <h5>Chief Health Officer</h5>
                 <div id="card3" class="cardImg"></div>
                 <p>
@@ -87,7 +87,7 @@
                 <div id="card3" class="cardImg"></div>
                 <h5>Dr. Kevin Malomba</h5>
                 <p>
-                    Disk plassade, seteskap. Stenor demibel. Mir mikros hjärtslagslag. Tefoni.
+                    Dr. Kevin is a software developer mainly a tech enthusiast. He has a passion in coding, write blogs on various topic of programming. The main weapons are NextJS and TailwindCSS.
                 </p>
             </div>
         </div>
