--- a/signup-doctor.html
+++ b/signup-doctor.html
@@ -14,6 +14,10 @@
 
     <div class="container">
         <form id="form1">
+            <div class="logo text-uppercase">
+
+                <p class="text-warning">tiba<span class="text-black">mtaani</span></p>
+            </div>
 
             <a href="index.html"><span class="p-1 " id="ex">x</span></a>
 
@@ -24,7 +28,7 @@
 
             <label for="contact">Phone Number/Office number</label>
             <br>
-            <input type="tel" id="phnenumber" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="+254 123456789">
+            <input type="tel" id="phnenumber"  placeholder="+254 123456789">
             <br>
             <label for="Location">Location</label>
             <br>
