--- a/how-it-works.html
+++ b/how-it-works.html
@@ -40,29 +40,35 @@
 
     </div>
     <div class="container-fluid pt-1 bg-danger text-white  d-flex align-items-center justify-content-center">
-        <p style="font-size:150%;">For More information visit <a class="tv" href="https://www.youtube.com/channel/UCadQ0XPVDJIm6zvcdcmt6NQ"  target="_blank"> TibaMtaani TV </a></p>
+        <p style="font-size:150%;">For More information visit <a class="tv" href="https://www.youtube.com/channel/UCadQ0XPVDJIm6zvcdcmt6NQ" target="_blank"> TibaMtaani TV </a></p>
     </div>
     <div class="container pt-5 pb-5" id="how">
         <div class="row d-flex justify-content-center align-items-center">
-            <div class="col-md-4">
-                <span>Tibapedia</span>
-                <p>
-                    Tibapedia is an initiative by Tiba Mtaani to build an online directory to enable citizens to access most if not all information concerning health.It is both an information and education platform that helps stakeholders access information such as the hospitals
-                    in a specific area, to the various fields of medicine and diseases
-                </p>
 
-            </div>
-            <div class="col-md-4">
+            <div class="col-md-6">
 
-                <span class="mt-4">TibaMtaani</span>
-                <p>
-                    Tibapedia is an initiative by Tiba Mtaani to build an online directory to enable citizens to access most if not all information concerning health.It is both an information and education platform that helps stakeholders access information such as the hospitals
-                    in a specific area, to the various fields of medicine and diseases
-                </p>
+                <strong>Tiba Mtaani User Manual.</strong>
+                <ul>
+                    <li>Users can search for a health service near their current location at the landing page.</li>
+                    <li>Users can choose to sign up and get extra Tiba Mtaani features. Such as saving items.</li>
+                </ul>
+
+                <strong>Tiba Mtaani Hospital Listing guidelines.</strong>
+                <ul>
+                    <li>For a hospital to be listed, it has to satisfy Tiba Mtaani quality assurance requirements.</li>
+                    <li>The hospital has to have approval documents issued by the ministry of health. E.g Health operation license.</li>
+
+                </ul>
+                <strong>Tiba Mtaani TV.</strong>
+                <p>Tiba Mtaani team has set up an online streaming platform on youtube to keep subscribers up to date with current trends in the health space.</p>
+
+                <strong>Tibapedia.</strong>
+                <p>This is an information and education platform founded by Tiba Mtaani to help stakeholders access healthcare materials.</p>
+
             </div>
             <!-- <div class="col-md-4"> -->
 
-                <!-- <span>Support Us</span>
+            <!-- <span>Support Us</span>
                 <p>
                     Tibapedia is an initiative by Tiba Mtaani to build an online directory to enable citizens to access most if not all information concerning health.It is both an information and education platform that helps stakeholders access information such as the hospitals
                     in a specific area, to the various fields of medicine and diseases
@@ -97,14 +103,6 @@
 
         </ul>
     </footer>
-
-
-    <form>
-
-        <label for="fhosp">Hospital Name</label>
-        <input type="text" name="hosp" id="hosp">
-
-    </form>
 
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
