--- a/signup-doctor.html
+++ b/signup-doctor.html
@@ -13,7 +13,7 @@
 <body>
 
     <div class="container">
-        <form id="form1">
+        <form class="form1">
             <div class="logo text-uppercase">
 
                 <p class="text-warning">tiba<span class="text-black">mtaani</span></p>
@@ -28,7 +28,7 @@
 
             <label for="contact">Phone Number/Office number</label>
             <br>
-            <input type="tel" id="phnenumber"  placeholder="+254 123456789">
+            <input type="tel" id="phnenumber" placeholder="+254 123456789">
             <br>
             <label for="Location">Location</label>
             <br>
@@ -65,6 +65,8 @@
         </form>
 
     </div>
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+    <script src="forms.js"></script>
 </body>
 
 </html>
