--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
 </head>
 <script src="https://kit.fontawesome.com/676b23db47.js" crossorigin="anonymous"></script>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="home.css">
 
 <body>
     <div class="nav pt-3 pb-2 ps-5">
@@ -22,12 +22,19 @@
         <ul>
             <li class="nav-item active"><a href="healthdir.html">Tib<span class="text-warning">aped</span>ia</a></li>
             <li><a href="how-it-works.html">How it works</a></li>
-            <li><a href="user-login.html">login</a></li>
+            <li><a href="about.html">About Us</a></li>
             <div class="dropdown">
-                <button class="dropbtn">Sign Up</button>
+                <svg class="dropbtn" width="35" height="35" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M12.5 14.0625C16.3819 14.0625 19.5313 10.913 19.5313 7.03125C19.5313 3.14941 16.3819 0 12.5 0C8.61816 0 5.46875 3.14941 5.46875 7.03125C5.46875 10.913 8.61816 14.0625 12.5 14.0625ZM18.75 15.625H16.0596C14.9756 16.123 13.7696 16.4062 12.5 16.4062C11.2305 16.4062 10.0293 16.123 8.94043 15.625H6.25C2.79785 15.625 0 18.4228 0 21.875V22.6562C0 23.9502 1.0498 25 2.34375 25H22.6563C23.9502 25 25 23.9502 25 22.6562V21.875C25 18.4228 22.2022 15.625 18.75 15.625Z" fill="white"/>
+                    </svg>
+
                 <div class="dropdown-content">
-                    <a href="signup-user.html">User Sign Up</a>
-                    <a href="signup-doctor.html">Doctor Sign Up</a>
+                    <a href="#">Profile</a>
+                    <a href="#">Saved Items</a>
+                    <a href="#">Contact Us</a>
+                    <a href="https://www.youtube.com/channel/UCadQ0XPVDJIm6zvcdcmt6NQ">TibaMtaani TV</a>
+                    <a href="#">Settings</a>
+                    <a href="index.html">Log out</a>
                 </div>
             </div>
         </ul>
@@ -37,15 +44,15 @@
     <div class="mama">
 
         <div class="container-fluid pt-1 bg-danger text-white  d-flex align-items-center justify-content-center">
-            <p style="font-size:150%;">For More information visit <a class="tv" href="https://www.youtube.com/channel/UCadQ0XPVDJIm6zvcdcmt6NQ"  target="_blank"> TibaMtaani TV </a></p>
+            <p style="font-size:150%;">For More information visit <a class="tv" href="https://www.youtube.com/channel/UCadQ0XPVDJIm6zvcdcmt6NQ" target="_blank"> TibaMtaani TV </a></p>
         </div>
 
         <div class="container-fluid" id="hero">
 
             <div class="hero-txt">
-                <h3 class="text-warning">Health Is Wealth</h3>
-                <P class="text-white">TibaMtaani leads you to a quality health facilty.<br>Tibapedia platforms provides both education and information materials for all stakeholders<br>All the institutions listed abide by the Ministry of Health Guidelines and have satisfied TibaMtaani Quality Assuarance Standards.<br><br>
-                    <a class="bg-dark text-white pt-2 pb-2 ps-4 pe-4 rounded-pill " id="about" href="about.html"><span>About us</span></a>
+                <h3 class="text-warning">Welcome To TibaMtaani</h3>
+                <P class="text-white">TibaMtaani leads you to a quality health facilty.<br>Tibapedia platforms provides both education and information materials for all stakeholders<br>All the institutions listed abide by the Ministry of Health Guidelines and have satisfied
+                    TibaMtaani Quality Assuarance Standards.<br><br>
                 </P>
             </div>
 
@@ -85,7 +92,7 @@
                     <span>Tibapedia</span>
                 </div>
                 <div class="col-md-4">
-                 <a href="https://www.youtube.com/channel/UCadQ0XPVDJIm6zvcdcmt6NQ" target="_blank"><svg width="100" height="71" viewBox="0 0 100 71" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <a href="https://www.youtube.com/channel/UCadQ0XPVDJIm6zvcdcmt6NQ" target="_blank"><svg width="100" height="71" viewBox="0 0 100 71" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M97.9104 11.0015C96.7603 6.67107 93.3718 3.26055 89.0693 2.10315C81.2709 0 50 0 50 0C50 0 18.7293 0 10.9306 2.10315C6.62823 3.26074 3.23968 6.67107 2.0896 11.0015C0 18.8507 0 35.2272 0 35.2272C0 35.2272 0 51.6038 2.0896 59.453C3.23968 63.7834 6.62823 67.0519 10.9306 68.2093C18.7293 70.3124 50 70.3124 50 70.3124C50 70.3124 81.2707 70.3124 89.0693 68.2093C93.3718 67.0519 96.7603 63.7834 97.9104 59.453C100 51.6038 100 35.2272 100 35.2272C100 35.2272 100 18.8507 97.9104 11.0015V11.0015ZM39.7727 50.0959V20.3586L65.9089 35.2276L39.7727 50.0959V50.0959Z"/>
                         </svg></a>
                     <span class="mt-4">TibaMtaani Tv</span>
@@ -132,7 +139,7 @@
         </ul>
     </footer>
 
-   
+
 
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
