--- a/home.html
+++ b/home.html
@@ -80,6 +80,21 @@
 
                 </form>
             </div>
+            <br><br><br>
+            <table id="table">
+                <tr>
+                    <th class="ps-3 pb-3 pt-3 pe-3">Name of Hospital</th>
+                    <th class="ps-3 pb-3 pt-3 pe-3">Service searched</th>
+                    <th class="ps-3 pb-3 pt-3 pe-3">Location</th>
+                    <th class="ps-3 pb-3 pt-3 pe-3">Distance from current location</th>
+                </tr>
+                <tr>
+                    <td class="ps-3 pb-3 pt-3 pe-3">PlainsView Hospital</td>
+                    <td class="ps-3 pb-3 pt-3 pe-3">Pediatrician</td>
+                    <td class="ps-3 pb-3 pt-3 pe-3">Membley</td>
+                    <td class="ps-3 pb-3 pt-3 pe-3">1km</td>
+                </tr>
+            </table>
 
         </div>
 
@@ -143,6 +158,7 @@
 
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-<link rel="stylesheet" href="script.js">
+<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+<script src="script.js"></script>
 
 </html>
