--- a/home.html
+++ b/home.html
@@ -58,21 +58,21 @@
 
             <div class="form-container bg-dark w-75 p-5">
                 <p class="text-white">Choose your Location & find a health service</p>
-                <form class="mofimu">
+                <form id="form02">
                     <select name="loc" id="loc">
                     <option value="">Choose your location</option>
-                    <option value="">Membley</option>
-                    <option value="">Kiambu</option>
-                    <option value="">Juja</option>
-                    <option value="">Muthaiga</option>
+                    <option value="Membley">Membley</option>
+                    <option value="Kiambu">Kiambu</option>
+                    <option value="Juja">Juja</option>
+                    <option value="Muthaiga">Muthaiga</option>
     
                 </select>
                     <select name="serv" id="serv">
                     <option value="">Choose your service</option>
-                    <option value="">Pediatrician</option>
-                    <option value="">Oncologist</option>
-                    <option value="">Dermatologist</option>
-                    <option value="">Dentist</option>
+                    <option value="Pediatrician">Pediatrician</option>
+                    <option value="Oncologist">Oncologist</option>
+                    <option value="Dermatologist">Dermatologist</option>
+                    <option value="Dentist">Dentist</option>
     
                 </select>
 
@@ -89,9 +89,9 @@
                     <th class="ps-3 pb-3 pt-3 pe-3">Distance from current location</th>
                 </tr>
                 <tr>
-                    <td class="ps-3 pb-3 pt-3 pe-3">PlainsView Hospital</td>
-                    <td class="ps-3 pb-3 pt-3 pe-3">Pediatrician</td>
-                    <td class="ps-3 pb-3 pt-3 pe-3">Membley</td>
+                    <td class="ps-3 pb-3 pt-3 pe-3"><a class="text-white" href="https://www.google.com/maps/place/Plainsview+Hospital+Ruiru/@-1.1564829,36.9650744,15z/data=!4m2!3m1!1s0x0:0x248f21110c66b8db?sa=X&ved=2ahUKEwi_qfLy2uD2AhVFgv0HHQJtDwEQ_BJ6BAgoEAU">Plainsview Hospital</a></td>
+                    <td id="servi" class="ps-3 pb-3 pt-3 pe-3"></td>
+                    <td id="loca" class="ps-3 pb-3 pt-3 pe-3"></td>
                     <td class="ps-3 pb-3 pt-3 pe-3">1km</td>
                 </tr>
             </table>
