--- a/index.html
+++ b/index.html
@@ -37,21 +37,22 @@
     <div class="mama">
 
         <div class="container-fluid pt-1 bg-danger text-white  d-flex align-items-center justify-content-center">
-            <p style="font-size:150%;">For More information visit <a class="tv" href="https://www.youtube.com/channel/UCadQ0XPVDJIm6zvcdcmt6NQ"  target="_blank"> TibaMtaani TV </a></p>
+            <p style="font-size:150%;">For More information visit <a class="tv" href="https://www.youtube.com/channel/UCadQ0XPVDJIm6zvcdcmt6NQ" target="_blank"> TibaMtaani TV </a></p>
         </div>
 
         <div class="container-fluid" id="hero">
 
             <div class="hero-txt">
                 <h3 class="text-warning">Health Is Wealth</h3>
-                <P class="text-white">TibaMtaani leads you to a quality health facilty.<br>Tibapedia platforms provides both education and information materials for all stakeholders<br>All the institutions listed abide by the Ministry of Health Guidelines and have satisfied TibaMtaani Quality Assuarance Standards.<br><br>
+                <P class="text-white">TibaMtaani leads you to a quality health facilty.<br>Tibapedia platforms provides both education and information materials for all stakeholders<br>All the institutions listed abide by the Ministry of Health Guidelines and have satisfied
+                    TibaMtaani Quality Assuarance Standards.<br><br>
                     <a class="bg-dark text-white pt-2 pb-2 ps-4 pe-4 rounded-pill " id="about" href="about.html"><span>About us</span></a>
                 </P>
             </div>
 
             <div class="form-container bg-dark w-75 p-5">
                 <p class="text-white">Choose your Location & find a health service</p>
-                <form class="mofimu">
+                <form id="form01">
                     <select name="loc" id="loc">
                     <option value="">Choose your location</option>
                     <option value="">Membley</option>
@@ -69,7 +70,7 @@
     
                 </select>
 
-                    <button id="btns" class="bg-dark" type="submit"><img src="assets/search.svg" alt="search"></button>
+                    <button id="btn2" class="bg-dark" type="submit"><img src="assets/search.svg" alt="search"></button>
 
                 </form>
             </div>
@@ -85,7 +86,7 @@
                     <span>Tibapedia</span>
                 </div>
                 <div class="col-md-4">
-                 <a href="https://www.youtube.com/channel/UCadQ0XPVDJIm6zvcdcmt6NQ" target="_blank"><svg width="100" height="71" viewBox="0 0 100 71" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <a href="https://www.youtube.com/channel/UCadQ0XPVDJIm6zvcdcmt6NQ" target="_blank"><svg width="100" height="71" viewBox="0 0 100 71" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M97.9104 11.0015C96.7603 6.67107 93.3718 3.26055 89.0693 2.10315C81.2709 0 50 0 50 0C50 0 18.7293 0 10.9306 2.10315C6.62823 3.26074 3.23968 6.67107 2.0896 11.0015C0 18.8507 0 35.2272 0 35.2272C0 35.2272 0 51.6038 2.0896 59.453C3.23968 63.7834 6.62823 67.0519 10.9306 68.2093C18.7293 70.3124 50 70.3124 50 70.3124C50 70.3124 81.2707 70.3124 89.0693 68.2093C93.3718 67.0519 96.7603 63.7834 97.9104 59.453C100 51.6038 100 35.2272 100 35.2272C100 35.2272 100 18.8507 97.9104 11.0015V11.0015ZM39.7727 50.0959V20.3586L65.9089 35.2276L39.7727 50.0959V50.0959Z"/>
                         </svg></a>
                     <span class="mt-4">TibaMtaani Tv</span>
@@ -132,10 +133,12 @@
         </ul>
     </footer>
 
-   
+
 
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-<link rel="stylesheet" href="script.js">
+<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+<script src="script.js"></script>
+
 
 </html>
